longhorn/longhorn-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: longhorn-route
  namespace: longhorn-system
spec:
  parentRefs:
    - name: http-gateway
      namespace: default
    - name: tailscale-gateway
      namespace: tailscale
  hostnames:
    - longhorn.jarvis-home.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
